# Snake

./: .gitignore  CMakeLists.txt
SnakeGuiConsole/: CMakeLists.txt
SnakeGuiConsole/include/: SnakeGuiConsole.hpp
SnakeGuiConsole/source/: SnakeGuiConsole.cpp
SnakeLib/: CMakeLists.txt
SnakeLib/include/: SnakeLib.hpp
SnakeLib/source/: SnakeLib.cpp
